--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,9 +13,9 @@
 <h2>Cats that are sleepy!</h2>
 
 <ul>
-  {{#each burgers}}
-    {{#if devour}}
-      {{> burgers/burger-block devour=false}}
+  {{#each cats}}
+    {{#if sleepy}}
+      {{> cats/cat-block sleep=false}}
     {{/if}}
   {{/each}}
 </ul>
@@ -24,15 +24,15 @@
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">burger Name:</label>
+    <label for="ca">Cat Name:</label>
     <input type="text" id="ca" name="name">
   </div>
 
   <div class="form-group">
-    <label for="devour">devour</label><br>
-    <input type="radio" name="devour" value="1" checked> Devoured<br>
-    <input type="radio" name="devour" value="0"> Awake
+    <label for="sleepy">Sleepy?</label><br>
+    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
+    <input type="radio" name="sleepy" value="0"> Awake
   </div>
 
-  <button type="submit">Add burger</button>
+  <button type="submit">Add Cat</button>
 </form>
