--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,60 @@
-<h1>Cats!</h1>
+{!-- Create the template that Handlebars can render onto. --}}
+{{!-- Create a button that will submit the user input into the database. --}}
 
-<h2>Cats that are not sleepy!</h2>
-
-<ul>
-  {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Cats that are sleepy!</h2>
-
-<ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Cat</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Cat Name:</label>
-    <input type="text" id="ca" name="name">
+<header>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 align="center">Eat The Burger</h1>
+    </div>
   </div>
+</header>
 
-  <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
+<div class="center">
+  <div class="row">
+    <div class="col-md-4">
+      <h2 align="center">Uneaten Burgers</h2>
+      <ul align="center">
+        {{#each burgers}}
+          {{#unless devoured}}
+            {{> burgers/burger-block devoured=false}}
+          {{/unless}}
+        {{/each}}
+      </ul>
+    </div>
+
+    <div align="center" class="col-md-4">
+      <br>
+      <br>
+      <img src="/assets/img/burger.jpg" alt="burger">
+    </div>
+
+
+    <div class="col-md-4">
+      <h2 align="center">Eaten Burgers</h2>
+      <ul align="center">
+        {{#each burgers}}
+          {{#if devoured}}
+           
+           {{> burgers/burger-block devoured=true}}
+          {{/if}}
+        {{/each}}
+      </ul>
+    </div>
   </div>
+</div>
+<br>
+<br>
+<div align="center" class="row">
+  <div class="col-md-12">
+    <h2>Add a Burger</h2>
+    <form class="create-form">
 
-  <button type="submit">Add Cat</button>
-</form>
+      <div class="form-group">
+        <label for="burg">Burger Name:</label>
+        <input type="text" id="burg" name="burger_name">
+      </div>
+
+      <button type="submit">Add Burger</button>
+    </form>
+  </div>
+</div>
