--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
     <div align="center" class="col-md-4">
       <br>
       <br>
-      <img src="/assets/img/burger.jpg" alt="burger">
+      <img src="/public/assets/img/burger.jpg" alt="burger">
     </div>
 
 
