--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-{!-- Create the template that Handlebars can render onto. --}}
+{{!-- {!-- Create the template that Handlebars can render onto. --}} --}}
 {{!-- Create a button that will submit the user input into the database. --}}
 
 <header>
@@ -25,7 +25,7 @@
     <div align="center" class="col-md-4">
       <br>
       <br>
-      <img src="/public/assets/img/burger.jpg" alt="burger">
+      <img src="/assets/img/burger.jpg" alt="burger">
     </div>
 
 
