yey tightening up the file tree

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,11 @@
 		<title>MVC With Burgers</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgers.js"></script>
+<style>
+	body{
+		background-image: url("/assets/img/beanstalk.png")
+	};
+	</style>
 	</head>
 	<body>
 		{{{ body }}}
