changes work in heroku

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
 <div class="center">
   <div class="row">
     <div class="col-md-4">
-      <h2 align="center">Uneatend Burgers</h2>
+      <h2 align="center">Uneaten Burgers</h2>
       <ul align="center">
         {{#each burgers}}
           {{#unless devoured}}
