--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,13 @@
 {{!-- {!-- Create the template that Handlebars can render onto. --}} 
 {{!-- Create a button that will submit the user input into the database. --}}
-
 <header>
-  <div class="row">
-    <div class="col-md-12">
-      <h1 align="center">Eat The Burger</h1>
-    </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4" align="center">Eat The Burger</h1>
+    <p class="lead"></p>
   </div>
 </header>
+
 
 <div class="center">
   <div class="row">
